fix link overflow

--- a/src/assets/scss/pages/_freelancer.scss
+++ b/src/assets/scss/pages/_freelancer.scss
@@ -86,4 +86,14 @@
       height: 100%;
     }
   }
+
+  .personal-website-link {
+    width: 100%;
+    word-break: break-word;
+    overflow-wrap: break-word;
+
+    @include media-breakpoint-down(md) {
+      text-align: center;
+      margin-bottom: 1rem;    }
+  }
 }
